--- a/FlightSimulator/Base.lproj/Main.storyboard
+++ b/FlightSimulator/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -171,11 +172,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="29r-EC-I9g">
-                                <rect key="frame" x="20" y="108" width="50" height="56"/>
+                                <rect key="frame" x="20" y="108" width="45" height="48"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                 <color key="tintColor" systemColor="labelColor"/>
-                                <state key="normal" image="volume.3" catalog="system"/>
+                                <state key="normal">
+                                    <imageReference key="image" image="volume.3" catalog="system" symbolScale="large"/>
+                                </state>
                                 <connections>
                                     <action selector="onMusicOptionChanged:" destination="UI0-73-Tcj" eventType="touchUpInside" id="lNr-c2-ugU"/>
                                 </connections>
